better column name

--- a/templates/highscore.html.j2
+++ b/templates/highscore.html.j2
@@ -1,7 +1,7 @@
 <table border=1>
     <tr>
         <th>device ID</th>
-        <th>highscore</th>
+        <th>distance</th>
     </tr>
     {% for score in scores %}
     <tr>
